# OpenCalc

./: README.md  WASM_BUILD.md
PCB/: PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch  board pre final  fp-info-cache  pre final.pcb3d  ~PCB.kicad_sch.lck
PCB/production/: PCB.kicad_pcb  PCB.kicad_pro  PCB.kicad_sch  PCB.kicad_sch-bak  bom.csv  designators.csv  netlist.ipc  positions.csv
PCB/production/PCB__SEPARATED/: PCB_ SEPARATED-B_Cu.gbl  PCB_ SEPARATED-B_Mask.gbs  PCB_ SEPARATED-B_Paste.gbp  PCB_ SEPARATED-B_Silkscreen.gbo  PCB_ SEPARATED-Edge_Cuts.gm1  PCB_ SEPARATED-F_Cu.gtl  PCB_ SEPARATED-F_Mask.gts  PCB_ SEPARATED-F_Paste.gtp  PCB_ SEPARATED-F_Silkscreen.gto  PCB_ SEPARATED-NPTH-drl_map.gbr  PCB_ SEPARATED-NPTH.drl  PCB_ SEPARATED-PTH-drl_map.gbr  PCB_ SEPARATED-PTH.drl
firmware/: CMakeLists.txt  Calc.cpp  Doc.md  Evaluator.cpp  Interprétation par l'évaluateur  README.md  Solver.cpp  Tools.cpp  elements.cpp  grapher.cpp  menu.cpp  sequences.cpp  settings.cpp  stack.cpp  ui.cpp
firmware/headers/: Calc.h  Evaluator.h  Solver.h  Tools.h  elements.h  grapher.h  menu.h  sequences.h  stack.h  ui.h
firmware/wasm/: build_wasm.sh  wasm_input.cpp
firmware/wasm/stubs/: wasm_framebuffer.h
firmware/wasm/stubs/hardware/: spi.h
firmware/wasm/stubs/pico/: stdlib.h
web-sim/: .gitignore  README.md  index.html  package-lock.json  package.json
web-sim/public/: opencalc.js  opencalc.wasm
web-sim/src/: App.jsx  styles.css
web-sim/src/wasm/: opencalc.wasm
website/: contact.html  index.html
